fixing overflow scroll

--- a/assets/style.css
+++ b/assets/style.css
@@ -90,6 +90,8 @@ button {
 /* HEADER */
 .header-section {
   background-color: var(--white);
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 /* LOGO */
@@ -379,6 +381,8 @@ button {
   display: flex;
   align-items: center;
   padding: 10rem 0;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 /* Card */
@@ -648,6 +652,8 @@ button {
   background-image: url("img/image\ 14.svg");
   background-size: cover;
   background-position: center;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .product .card {
@@ -772,6 +778,8 @@ blockquote h3:before {
 /* MAPS / QUOTES */
 .maps {
   margin: 10rem 0;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .maps h1 {
@@ -882,6 +890,8 @@ blockquote h3:before {
   background-color: var(--white);
   color: var(--white);
   padding: 5rem 10%;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .corevalues h2,
@@ -933,6 +943,8 @@ blockquote h3:before {
   justify-content: center;
   justify-content: space-between;
   position: relative;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .footer h2 {
